PROJECT (CudaLib)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(CUDA REQUIRED)

SET (CUDA_VERBOSE_BUILD ON CACHE BOOL "nvcc verbose" FORCE) 
#HW capability 1.3

SET(LIB_TYPE STATIC)	#set the lib type
CUDA_ADD_LIBRARY(CudaLib ${LIB_TYPE} cuda.h cuda.cu)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/build_win64/Release)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/build_win64/Release)
CUDA_ADD_EXECUTABLE(main_exe main.cpp)
ADD_DEPENDENCIES(main_exe CudaLib)
TARGET_LINK_LIBRARIES(main_exe CudaLib)


